--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@tiptap/extension-character-count": "^2.0.0-beta.13",
     "@tiptap/starter-kit": "^2.0.0-beta.115",
     "@tiptap/vue-3": "^2.0.0-beta.66",
     "vue": "^3.2.16"
