Error - cannot contain ES exports

--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@tiptap/extension-character-count": "^2.0.0-beta.13",
     "@tiptap/starter-kit": "^2.0.0-beta.115",
     "@tiptap/vue-3": "^2.0.0-beta.66",
-    "tailwindcss": "^2.2.16",
     "vue": "^3.2.16"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.2",
+    "autoprefixer": "^10.3.7",
+    "postcss": "^8.3.9",
+    "tailwindcss": "^2.2.16",
     "typescript": "^4.4.3",
     "vite": "^2.6.0",
     "vue-tsc": "^0.3.0"
